--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -11,6 +11,7 @@
 		<!-- Toggle the links based on authentication status -->
 		{{if .IsAuthenticated}}
 		<form action='/user/logout' method='POST'>
+			<input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
 			<button>Logout</button>
 		</form>
 		{{else}}
